<resources>
    <string name="app_name">Banco Pau</string>
    <string name="input_dni">Introduce tu DNI</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_salir">Salir</string>
    <string name="input_pass">Introduce la contraseña: 1234</string>
    <string name="campo_requerido">Campo requerido</string>
    <string name="bank">banco</string>
    <string name="iniciar_sesion_title">Iniciar sesión</string>
    <string name="welcome_msg">Bienvenido/a</string>
    <string name="dni_no_encontrado">DNI no encontrado</string>

    <string name="posicion_global">Posición Global</string>
    <string name="cambiar_contrasenya">Cambiar contraseña</string>
    <string name="transferencias">Transferencias</string>
    <string name="promociones">Promociones</string>
    <string name="cajeros">Cajeros</string>
    <string name="salir">Salir</string>
    <string name="movimientos">Movimientos</string>
    <string name="contrasenyas_nuevas_no_coinciden">Contraseñas nuevas no coinciden</string>
    <string name="contrasenya_cambiada_con_exito">Contraseña cambiada con éxito</string>
    <string name="contrasenya_incorrecta">Contraseña incorrecta</string>
    <string name="dni_no_valido">DNI no válido</string>
    <string name="contrasenya_requerida">Contraseña requerida</string>
    <string name="modificar_contrasenya">Modificar\nContraseña</string>
    <string name="introduce_la_actual_contrasenya">Introduce la actual contraseña</string>
    <string name="introduce_la_nueva_contrasenya">Introduce la nueva contraseña</string>
    <string name="repite_la_nueva_contrasenya">Repite la nueva contraseña</string>
    <string name="modificar">Modificar</string>
    <string name="dni_y_contrasenya_no_coinciden">DNI y contraseña no coinciden</string>
    <string name="transferencia">Transferencia</string>
    <string name="cuenta_origen">Cuenta origen:</string>
    <string name="cuenta_destino">Cuenta destino:</string>
    <string name="propia">Propia</string>
    <string name="ajena">Ajena</string>
    <string name="escribe_el_num_de_cuenta">Escribe el num. de cuenta</string>
    <string name="cantidad">Cantidad:</string>
    <string name="enviar_justificante">Enviar justificante</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="error_cuenta_destino">Error! Introduce el nº\nde la cuenta destino.</string>
    <string name="error_icantidad_transferencia">Error! Introduce la/ncantidad a transferir.</string>
    <string name="cuenta_destino_conf">"Cuenta destino "</string>
    <string name="propia_txt">propia:</string>
    <string name="ajena_txt">ajena:</string>
    <string name="importe">"Importe: "</string>
    <string name="enviar_justificante_txt">"Enviar justificante: "</string>
    <string name="confirmar_transaccion_titulo_dialogo">Confirmar transacción?</string>

    <string name="cuenta_destino_dialogo">Cuenta destino:\n%1$s</string>
    <string name="salir_de_la_sesion">Salir de la sesión</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cuenta_origen_dialogo">Cuenta origen:\n%1$s</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="idioma_aplicacion">Idioma de la aplicación</string>
    <string name="origen_bd">Origen de la base de datos</string>
    <string name="musica_ambiental">Música ambiental</string>
    <string name="animacion_inicial">Animación inicial</string>
    <string name="tienda_modificada_correctamente">Tienda modificada correctamente</string>
    <string name="tienda_agregada_correctamente">Tienda agregada correctamente</string>
</resources>