<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_global_position"
        android:title="@string/posicion_global"
        android:icon="@drawable/ic_euro" />

    <item
        android:id="@+id/nav_transfer"
        android:title="@string/transferencias"
        android:icon="@drawable/ic_transfer" />
    <item
        android:id="@+id/nav_password_change"
        android:title="@string/cambiar_contrasenya"
        android:icon="@drawable/ic_password" />
    <item
        android:id="@+id/nav_promo"
        android:title="@string/promociones"
        android:icon="@drawable/ic_promo" />
    <item
        android:id="@+id/nav_atm"
        android:title="@string/cajeros"
        android:icon="@drawable/ic_atm" />
    <item
        android:id="@+id/nav_movements"
        android:title="@string/movimientos"
        android:icon="@drawable/ic_movements" />


    <item
        android:id="@+id/nav_settings"
        android:title="Opciones"
        android:icon="@drawable/ic_settings" />

    <item
        android:id="@+id/nav_exit"
        android:title="@string/salir_de_la_sesion"
        android:icon="@drawable/ic_logout" />

</menu>