<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordChangeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin_default"


            android:fontFamily="sans-serif-medium"
            android:text="@string/modificar_contrasenya"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineH1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />





        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineH1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginTop="@dimen/common_margin_default"
            android:hint="@string/introduce_la_actual_contrasenya"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"


            app:helperText="@string/campo_requerido"
            app:endIconMode="password_toggle"

            android:layout_marginTop="@dimen/common_margin_default"
            android:layout_marginStart="@dimen/margin_imput_login"
            android:layout_marginEnd="@dimen/margin_imput_login">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputtext_vieja_contrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintTop_toTopOf="parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guidelineH2"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/introduce_la_nueva_contrasenya"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"


            app:helperText="@string/campo_requerido"
            app:endIconMode="password_toggle"

            android:layout_marginTop="@dimen/common_margin_default"
            android:layout_marginStart="@dimen/margin_imput_login"
            android:layout_marginEnd="@dimen/margin_imput_login">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputtext_nueva_contrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineH2"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/repite_la_nueva_contrasenya"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"


            app:helperText="@string/campo_requerido"
            app:endIconMode="password_toggle"

            android:layout_marginTop="@dimen/common_margin_default"
            android:layout_marginStart="@dimen/margin_imput_login"
            android:layout_marginEnd="@dimen/margin_imput_login">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputtext_repetir_contrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintTop_toTopOf="parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cambiar_contrasenya"
            android:layout_width="@dimen/login_btn_size"
            android:layout_height="wrap_content"
            android:text="@string/modificar"

            app:layout_constraintStart_toEndOf="@id/guidelineV"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginStart="@dimen/common_margin_default"
            android:layout_marginBottom="@dimen/double_margin_default"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSalir"
            android:layout_width="@dimen/login_btn_size"
            android:layout_height="wrap_content"
            android:text="@string/btn_salir"

            app:layout_constraintEnd_toStartOf="@id/guidelineV"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginEnd="@dimen/common_margin_default"
            android:layout_marginBottom="@dimen/double_margin_default"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>